--- a/docs/_sources/airbnb_price_predictor.ipynb
+++ b/docs/_sources/airbnb_price_predictor.ipynb
@@ -34,8 +34,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "\n",
-    "In this Airbnb price prediction project, I haven chosen to use the data of Vancouver Airbnb from [Inside Airbnb](http://insideairbnb.com/get-the-data/). I have also build a interactive dashboard so that viewers can have a better understanding about the data.\n",
+    "In this Airbnb price prediction project, I utilized Vancouver Airbnb data sourced from Inside Airbnb. To enhance user interaction and understanding, I developed an interactive dashboard that provides a visual representation of the dataset.\n",
     "\n",
     "I undertook a comprehensive workflow that included exploratory data analysis (EDA), preprocessing, feature engineering, model building, feature selection, hyperparameter optimization, and model testing. Our aim was to develop an effective machine learning model to predict Airbnb prices. The models considered in the project include Polynomial Ridge, LGBM, Random Forest, and variations of Random Forest models. \n",
     "\n",
@@ -48,9 +47,9 @@
    "source": [
     "## Introduction and Understanding the data\n",
     "\n",
-    "The data is from [Inside Airbnb](http://insideairbnb.com/get-the-data/) capturing all the listings in Airbnb in Vancouver uptill 13 December 2023. It contains 6695 listings and is described by 75 different columns, including information about the host, the text description, the location of the listing, and the rating of comments. I aim to use these features to predict its price. \n",
+    "The data is from [Inside Airbnb](http://insideairbnb.com/get-the-data/) capturing all the listings in Airbnb in Vancouver uptill 13 December 2023. It contains 6695 listings and is described by 75 different columns, including information about the host, the text description, the location of the listing, and the rating of comments.The primary goal is to leverage these features for predicting listing prices.\n",
     "\n",
-    "Below is the distribution of some of the numeric features."
+    " the distribution of key numeric features within the dataset, offering insights into the characteristics of the Airbnb listings under consideration."
    ]
   },
   {
@@ -90,10 +89,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the charts above, the following conclusion can be made:\n",
-    "1. The target variable (price) is highly skewed. It might be better to normalized it.\n",
-    "2. It seems that the review score is highly correlated to each other, so it would be wise to only keep one of them.\n",
-    "3. There is also high correlation between host_listing_count and host_total_listing_coung. So we only keep one of them."
+    "The visualizations reveal several noteworthy observations:\n",
+    "\n",
+    "1. Skewed Price Distribution: The distribution of the target variable (price) appears highly skewed, indicating a potential benefit from normalization for improved model performance.\n",
+    "\n",
+    "2. Correlation in Review Scores: Review scores exhibit significant correlation with each other. To streamline the model, it is advisable to retain only one representative score.\n",
+    "\n",
+    "3. Redundancy in Host Listing Count: A notable correlation exists between 'host_listing_count' and 'host_total_listing_count.' To enhance model simplicity, retaining only one of these features is suggested.\n",
+    "\n",
+    "These insights guide our approach towards refining the dataset for optimal model performance and interpretability."
    ]
   },
   {
@@ -123,18 +127,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methods\n",
+    "## Analysis\n",
+    "The project evaluates several machine learning models, encompassing Polynomial Ridge, LGBM, and various Random Forest iterations. The pipeline incorporates diverse data processing and engineering techniques:\n",
     "\n",
-    "### Analysis\n",
-    "The models considered in the project include Polynomial Ridge, LGBM, Random Forest, and variations of Random Forest models. \n",
-    "Several data processing and engineering techniques were used in this piepline, including a \n",
-    "1. Countvectorizer for the two columns of text data \n",
-    "2. Scaling on the numeric features\n",
-    "3. One-hot-encoding on the categorical data\n",
-    "4. Feature engineering of two text columns, getting the positvity of the description of the listing, and its neighbourhood\n",
-    "5. Log transformation of the target variable.\n",
+    "1. Text Data Processing: Utilization of CountVectorizer for two text columns, enhancing model comprehension of textual information.\n",
     "\n",
-    "Data was split with 80% being partitioned into the training set and 20% being partitioned into the test set. LGBM appears to be the best performing model, and therefore hyperparameter tuning is employed. The hyperparameter $K$ was chosen using 10-fold cross validation with the test score as the classification metric.\n",
+    "2. Feature Scaling: Application of scaling on numeric features for improved model convergence and performance.\n",
+    "\n",
+    "3. One-Hot Encoding: Transformation of categorical data through one-hot encoding for effective model integration.\n",
+    "\n",
+    "4. Feature Engineering: Introduction of new features based on sentiment analysis, capturing the positivity of listing descriptions and neighborhood overviews.\n",
+    "\n",
+    "5. Target Variable Transformation: Log transformation applied to the target variable for improved model fitting.\n",
+    "\n",
+    "The dataset is partitioned into an 80% training set and a 20% test set. LGBM emerges as the top-performing model, prompting further refinement through hyperparameter tuning. The hyperparameter is optimized using 10-fold cross-validation, with the test score serving as the classification metric.\n",
     "\n",
     "Below is the result of the performance of every model."
    ]
@@ -302,7 +308,7 @@
    "source": [
     "## Results & Discussion\n",
     "\n",
-    "In the final stages of our Airbnb price prediction project, the LGBM model demonstrated exceptional performance, achieving a robust test score of 0.6 on the entire training dataset. The feature importance analysis highlighted key factors influencing predicted prices, with room availability and minimum nights emerging as top contributors. Notably, our innovative feature, capturing the positivity of the description text, secured a position among the top 5 influential features. These findings underscore the model's ability to discern crucial patterns in Airbnb pricing, providing a solid foundation for further refinement and application. Moving forward, ongoing exploration of feature engineering and fine-tuning holds the potential for even more accurate predictions.\n"
+    "In the final stages of our Airbnb price prediction project, the LGBM model demonstrated the best performance, achieving a robust test score of 0.6 on the entire training dataset. The feature importance analysis highlighted key factors influencing predicted prices, with room availability and minimum nights emerging as top contributors. Notably, our innovative feature, capturing the positivity of the description text, secured a position among the top 5 influential features. These findings underscore the model's ability to discern crucial patterns in Airbnb pricing, providing a solid foundation for further refinement and application. Moving forward, ongoing exploration of feature engineering and fine-tuning holds the potential for even more accurate predictions.\n"
    ]
   },
   {
