--- a/docs/_sources/airbnb_price_predictor.ipynb
+++ b/docs/_sources/airbnb_price_predictor.ipynb
@@ -104,23 +104,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition, I have used Tableau to create an interactive dashboard."
+    "In addition, I have used Tableau to create an interactive dashboard which you can also access [here](https://public.tableau.com/app/profile/bill.wan6088/viz/Dashboard_Vancouver_airbnb/Dashboard1?publish=yes)."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
    "source": [
-    "<!-- Embed Tableau Visualization -->\n",
-    "<div class='tableauPlaceholder' id='viz1704512271559' style='position: relative'>\n",
-    "  <noscript>\n",
-    "    <a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;RR&#47;RRQTYPS4R&#47;1_rss.png' style='border: none' /></a>\n",
-    "  </noscript>\n",
-    "  <object class='tableauViz' style='display:none;'>\n",
-    "    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />\n",
-    "    <!-- Other params from the embed code -->\n",
-    "  </object>\n",
-    "</div>"
+    "%%html\n",
+    "<div class='tableauPlaceholder' id='viz1704569104740' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Dashboard_Vancouver_airbnb&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Dashboard_Vancouver_airbnb&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Dashboard_Vancouver_airbnb&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1704569104740');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1277px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>"
    ]
   },
   {
@@ -148,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
