update report notebook

--- a/docs/_sources/airbnb_price_predictor.ipynb
+++ b/docs/_sources/airbnb_price_predictor.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predict students' dropout and academic success\n",
-    "\n",
+    "# Predict Vancouver's Airbnb Price\n",
     "by Bill Wan\n",
     "2024/01/05"
    ]
