--- a/docs/_sources/airbnb_price_predictor.ipynb
+++ b/docs/_sources/airbnb_price_predictor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predict Vancouver's Airbnb Price\n",
+    "# Predicting Vancouver's Airbnb Price\n",
     "by Bill Wan\n",
     "2024/01/05"
    ]
